Update 'backend-tests-go-wkpewrmq' component image to: quay.io/rhtap_qe/backend-tests-go-wkpewrmq:5c3e3e55af2a43fc23866b5aa963826a17bb34ca@sha256:9d35da7b4cae4d1ebee19b0e732685e275cf3c82f2f9da60e1c37c006e5a14c6

--- a/components/backend-tests-go-wkpewrmq/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-wkpewrmq/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-wkpewrmq
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-wkpewrmq:5c3e3e55af2a43fc23866b5aa963826a17bb34ca@sha256:9d35da7b4cae4d1ebee19b0e732685e275cf3c82f2f9da60e1c37c006e5a14c6
+          name: container-image
